--- a/commoncrawl_benchmark.ipynb
+++ b/commoncrawl_benchmark.ipynb
@@ -5,15 +5,63 @@
    "metadata": {},
    "source": [
     "# GraphLab Create PageRank Benchmark - CommonCrawl 2012 Dataset\n",
-    "## AWS EC2 Benchmark Notebook\n",
-    "This notebook should be used when running the GraphLab Create PageRank Benchmark [over an EC2 instance as described here](http://www.qwantz.com). If you are using a different environment"
+    "## AWS EC2 Benchmark Notebook"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Initialize and mount SSDs that will be used as cache locations"
+    "You should set the 3 following keys for the code to run (even if you are not running this benchmark on EC2).\n",
+    "\n",
+    "The GraphLab Product Key should have been e-mailed to you after you [registered on the Dato website](https://dato.com/download/). If you register yet, do it now.\n",
+    "\n",
+    "The AWS keys should be available to you via the AWS website. [Follow their instructions](http://docs.aws.amazon.com/AWSSimpleQueueService/latest/SQSGettingStartedGuide/AWSCredentials.html) to get these keys. You will need these keys to access the S3 bucket where the CommonCrawl SGraph is stored. Any pair of credentials will do."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "graphlab_create_product_key = 'YOUR_PRODUCT_KEY'\n",
+    "aws_access_key_id='YOUR_ACCESS_KEY'\n",
+    "aws_secret_access_key='YOUR_SECRET_KEY'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook should be used when running the GraphLab Create PageRank Benchmark [over an EC2 instance as described here](https://github.com/guy4261/glc_pagerank_benchmark/blob/master/commoncrawl_benchmark_ec2_instructions/guide.pdf). If you are running this on your own machine, change the following flag from `True` to `False`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "running_on_ec2 = True\n",
+    "# running_on_ec2 = False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Skip this stage if you are not running on EC2 and proceed to the **Initialize GraphLab Create** step.\n",
+    "\n",
+    "### Initialize and mount SSDs that will be used as cache locations\n",
+    "\n",
+    "The following cell will initialize and mount the ephemeral SSD drives that are available on your instance.\n",
+    "\n",
+    "**If you are not running this benchmark from an S3 instance, skip this step.**"
    ]
   },
   {
@@ -61,9 +109,9 @@
    "source": [
     "# Fill in YOUR_PRODUCT_KEY which you got from Dato; and from your AWS credentials, YOUR_ACCESS_KEY and YOUR_SECRET_KEY \n",
     "import graphlab as gl\n",
-    "gl.product_key.set_product_key(\"YOUR_PRODUCT_KEY\")\n",
-    "gl.aws.set_credentials(access_key_id='YOUR_ACCESS_KEY', \n",
-    "                       secret_access_key='YOUR_SECRET_KEY')"
+    "gl.product_key.set_product_key(graphlab_create_product_key)\n",
+    "gl.aws.set_credentials(access_key_id=aws_access_key_id, \n",
+    "                       secret_access_key=aws_secret_access_key)"
    ]
   },
   {
@@ -75,7 +123,8 @@
    "outputs": [],
    "source": [
     "# Set the cache locations to the SSDs.\n",
-    "gl.set_runtime_config(\"GRAPHLAB_CACHE_FILE_LOCATIONS\", \"/mnt/tmp1:/mnt/tmp2\")"
+    "if running_on_ec2:\n",
+    "    gl.set_runtime_config(\"GRAPHLAB_CACHE_FILE_LOCATIONS\", \"/mnt/tmp1:/mnt/tmp2\")"
    ]
   },
   {
