Added filesize of dataset, said no one else can handle it

--- a/CommonCrawl2012PageRankBenchmarkBlogPost.ipynb
+++ b/CommonCrawl2012PageRankBenchmarkBlogPost.ipynb
@@ -136,7 +136,7 @@
     "http://data.dws.informatik.uni-mannheim.de/hyperlinkgraph/2012-08/network/part-r-00696.gz\n",
     "```\n",
     "\n",
-    "As CommonCrawl's own documentation says, each of these gzip files weights ~500 MBs. Here is the `head` of the first file (`part-r-00000.gz`):\n",
+    "As CommonCrawl's own documentation says, each of these gzip files weights ~500 MBs. The entire edges dataset weight around **330 GBs**. Here is the `head` of the first file (`part-r-00000.gz`):\n",
     "\n",
     "```\n",
     "0\t739935047\n",
@@ -147,7 +147,7 @@
     "This is a very common format for storing graph edges - id1-TAB-id2.\n",
     "While GraphLab could handle loading such a graph, we saved you the the trouble of downloading the files to your EC2 instance and uploaded it to an open S3 bucket. To access it you only need AWS credentials.\n",
     "\n",
-    "The SGraph created by loading the data is stored in binary form in this bucket; that way, it weights around 218 GBs, less than the gzipped edges.\n",
+    "The SGraph created by loading the data is stored in binary form in this bucket; that way, it weights around **218 GBs**, less than the **330 GBs of gzipped edge file.\n",
     "Also, since this data is stored on Amazon's S3, accessing it from your EC2 instance should be faster than downloading the raw data from CommonCrawl's servers.\n",
     "\n",
     "The bucket is located at [s3://dato-datasets-oregon/webgraphs/sgraph/common_crawl_2012_sgraph/](s3://dato-datasets-oregon/webgraphs/sgraph/common_crawl_2012_sgraph/) ."
