type fixed; product key set only if necessary

--- a/CommonCrawl2012PageRankBenchmarkBlogPost.ipynb
+++ b/CommonCrawl2012PageRankBenchmarkBlogPost.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "This notebook will describe our **PageRank benchmark**. The dataset for this benchmark is the web itself - compiled by good people from [commoncrawl.org](http://commoncrawl.org/) in 2012. You can [download the dataset from here](http://webdatacommons.org/hyperlinkgraph/2012-08/download.html#toc0). We will run the **PageRank** algorithm over a network of **3.5 billion nodes** and **128 billion links**. Each node represents a web page, and each link - a hyperlink between two pages. GraphLab should do it in **about 5 hours**.\n",
     "\n",
-    "Running this benchmark will prove you how powerful and robust GraphLab is - we are not available of any general-purpose graph analytics system that can cope with this task, either on a single machine or distributed. However, unlike other notebooks in the gallery, we **don't recommend running this notebook on your laptop!**. Instead, this notebook will describe how to run this benchmark on an EC2 instance in the Amazon Web Services (AWS) cloud.\n",
+    "Running this benchmark will prove you how powerful and robust GraphLab is - we are not aware of any general-purpose graph analytics system that can cope with this task, either on a single machine or distributed. However, unlike other notebooks in the gallery, we **don't recommend running this notebook on your laptop!**. Instead, this notebook will describe how to run this benchmark on an EC2 instance in the Amazon Web Services (AWS) cloud.\n",
     "\n",
     "We'll be using an **r3.8xlarge** EC2 instance. That's a strong machine,\n",
     "with 32 cores, 244 Gigabytes of RAM, and 2 SSD drives, each sized 320 GBs.\n",
