set product key only iff necessary

--- a/commoncrawl_benchmark.ipynb
+++ b/commoncrawl_benchmark.ipynb
@@ -109,7 +109,10 @@
    "source": [
     "# Fill in YOUR_PRODUCT_KEY which you got from Dato; and from your AWS credentials, YOUR_ACCESS_KEY and YOUR_SECRET_KEY \n",
     "import graphlab as gl\n",
-    "gl.product_key.set_product_key(graphlab_create_product_key)\n",
+    "\n",
+    "if gl.product_key.get_product_key() is None:\n",
+    "    gl.product_key.set_product_key(graphlab_create_product_key)\n",
+    "\n",
     "gl.aws.set_credentials(access_key_id=aws_access_key_id, \n",
     "                       secret_access_key=aws_secret_access_key)"
    ]
