Load data from .gz files

--- a/criteo_benchmark.ipynb
+++ b/criteo_benchmark.ipynb
@@ -209,7 +209,7 @@
     "def load_days(start, end):\n",
     "    data = gl.SFrame()\n",
     "    for i in range(start, end + 1):\n",
-    "        data = data.append(gl.SFrame.read_csv('%s/day_%d_int.gl' % (data_dir, i)),\n",
+    "        data = data.append(gl.SFrame.read_csv('%s/day_%d.gz' % (data_dir, i)),\n",
     "                          delimiter='\\t', header=False, verbose=False)\n",
     "    return data\n",
     "\n",
