set aws keys only if necessary

--- a/commoncrawl_benchmark.ipynb
+++ b/commoncrawl_benchmark.ipynb
@@ -113,7 +113,10 @@
     "if gl.product_key.get_product_key() is None:\n",
     "    gl.product_key.set_product_key(graphlab_create_product_key)\n",
     "\n",
-    "gl.aws.set_credentials(access_key_id=aws_access_key_id, \n",
+    "try:\n",
+    "    gl.aws.get_credentials()\n",
+    "except KeyError:\n",
+    "    gl.aws.set_credentials(access_key_id=aws_access_key_id, \n",
     "                       secret_access_key=aws_secret_access_key)"
    ]
   },
