fixed syntax errors

--- a/commoncrawl_benchmark.ipynb
+++ b/commoncrawl_benchmark.ipynb
@@ -198,7 +198,7 @@
     "from datetime import timedelta\n",
     "training_time_secs = pr['training_time']\n",
     "print \"Total training time:\", timedelta(seconds=training_time_secs)\n",
-    "print \"Avg. time per iteration:\", timedelta(seconds=(training_time_secs / float(pr['num_iterations']))"
+    "print \"Avg. time per iteration:\", timedelta(seconds=(training_time_secs / float(pr['num_iterations'])))"
    ]
   }
  ],
