--- a/criteo_benchmark.ipynb
+++ b/criteo_benchmark.ipynb
@@ -347,7 +347,7 @@
     "                                               random_seed=0)\n",
     "\n",
     "    training_time = time.time() - start\n",
-    "    print 'Training time:', training_time\n",
+    "    print 'Training time:', timedelta(seconds=training_time)\n",
     "    print 'End-to-end fitting and training time', timedelta(seconds=(fit_transform_time + training_time))"
    ]
   }
