changed id so that rendering in github will support links

--- a/criteo_benchmark.ipynb
+++ b/criteo_benchmark.ipynb
@@ -149,8 +149,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id=\"init_glc\"></a>\n",
-    "## Initialize GraphLab Create and Set Runtime Configurations"
+    "<h2 id=\"init_glc\">Initialize GraphLab Create and Set Runtime Configurations</h2>"
    ]
   },
   {
