--- a/criteo_benchmark.ipynb
+++ b/criteo_benchmark.ipynb
@@ -149,7 +149,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2 id=\"init_glc\">Initialize GraphLab Create and Set Runtime Configurations</h2>"
+    "<h2>Initialize GraphLab Create and Set Runtime Configurations</h2>"
    ]
   },
   {
