return to your own anchors: github doesn't pull this off

--- a/criteo_benchmark.ipynb
+++ b/criteo_benchmark.ipynb
@@ -149,6 +149,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<span id=\"init-glc\"></span>\n",
     "## Initialize GraphLab Create and Set Runtime Configurations"
    ]
   },
