incorporated @alonpa's comments

--- a/CriteoBenchmarkBlogPost.ipynb
+++ b/CriteoBenchmarkBlogPost.ipynb
@@ -513,18 +513,17 @@
    "source": [
     "In the context of Gradient Boosted Trees, each categorical value may have its own node in the tree.\n",
     "\n",
-    "While GraphLab can handle this situation, this is a very heavy-duty task, when there's another way to represent these categorical values. In the benchmark notebook, we will run build a model using only those categorical feature columns with as little categorical values as possible."
+    "While GraphLab can handle this situation, this is a very heavy-duty task, when there's another way to represent these categorical values. In the benchmark notebook, we will build a model using only those categorical feature columns with as little categorical values as possible."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The other way is to use our [Count Featurizer](https://dato.com/products/create/docs/generated/graphlab.toolkits.feature_engineering.CountFeaturizer.html#graphlab.toolkits.feature_engineering.CountFeaturizer),\n",
-    "which implements the method described here: \n",
-    "[https://blogs.technet.microsoft.com/machinelearning/2015/02/17/big-learning-made-easy-with-counts/](https://blogs.technet.microsoft.com/machinelearning/2015/02/17/big-learning-made-easy-with-counts/).\n",
+    "The other way is to use our [Count Featurizer API](https://dato.com/products/create/docs/generated/graphlab.toolkits.feature_engineering.CountFeaturizer.html#graphlab.toolkits.feature_engineering.CountFeaturizer),\n",
+    "which implements the [method described here](https://blogs.technet.microsoft.com/machinelearning/2015/02/17/big-learning-made-easy-with-counts/).\n",
     "\n",
-    "You will see this in practice in the benchmark notebook, and you're invited to [read more about in in our API documentation](https://dato.com/products/create/docs/generated/graphlab.toolkits.feature_engineering.CountFeaturizer.html#graphlab.toolkits.feature_engineering.CountFeaturizer)."
+    "You will see this in practice in the benchmark notebook, and you're invited to [read more about in in our user guide](https://dato.com/learn/userguide/feature-engineering/count_featurizer.html)."
    ]
   },
   {
@@ -541,11 +540,11 @@
     "\n",
     "When dealing with extremely large datasets, on an amazingly powerful machine, such tweaks can save a lot of time.\n",
     "\n",
-    "**MAXIMUM_CACHE_CAPACITY** is the number of bytes to hold in memory before flushing to disk. SFrame/SArray are all \"external memory\" datastructures, but we don't want to flush any SFrame/SArray objects to disk. So we have a cache io layer acting as a disk buffer, and the constant is the capacity of the buffer. Once the size of new intermediate SFrame/SArray exceeds the buffer, they are flushed to disk.\n",
+    "**MAXIMUM_CACHE_CAPACITY** is the number of bytes to hold in memory before flushing to disk. SFrame/SArray are all \"external memory\" datastructures, but we don't want to flush any SFrame/SArray objects to disk. So we have a cache IO layer acting as a disk buffer, and the constant is the capacity of the buffer. Once the size of new intermediate SFrame/SArray exceeds the buffer, they are flushed to disk.\n",
     "\n",
     "**MAXIMUM_CACHE_CAPACITY_PER_FILE** is similar to **MAXIMUM_CACHE_CAPACITY** but limit to a single file.\n",
     "\n",
-    "The goal of these changes is to improve the disk IO efficiency because the boosted trees model is running external memory mode. Before the first iteration, we preprocess and sort the columns and save on disk. Each iteration at every depth, these \"columns\" are loaded into memory to search the best split."
+    "The goal of these changes is to improve the disk IO efficiency because the boosted trees model is running in external memory mode. Before the first iteration, we preprocess and sort the columns and save on disk. Each iteration at every depth, these \"columns\" are loaded into memory to search the best split."
    ]
   },
   {
