add ; to for loop in bash script

--- a/criteo_benchmark.ipynb
+++ b/criteo_benchmark.ipynb
@@ -140,7 +140,7 @@
    "source": [
     "%%bash\n",
     "cd /mnt/data\n",
-    "for i in {0..23} do\n",
+    "for i in {0..23}; do\n",
     "    wget --continue --timestamping http://azuremlsampleexperiments.blob.core.windows.net/criteo/day_${i}.gz\n",
     "done"
    ]
