--- a/criteo_benchmark.ipynb
+++ b/criteo_benchmark.ipynb
@@ -134,7 +134,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
